# dbtools

./: .gitignore  README.md  pyproject.toml
schemas/: mapa_migracion_pec_a_xes.json  pec_schema.json  triacademy.json  xes.json  xes_schema.json
src/: test.py
src/cli/: __init__.py  __main__.py
src/dbanalyzer/: README.md  __init__.py  __main__.py  analyze.py  analyze_old.py  assistant-instructions.md  functions.py  lmstudio.py  prompt.md
src/dbcheck/: column.py  database.py  foreign_key.py  view.py
src/dbchecker/: README.md  __init__.py  __main__.py  column.py  table.py  view.py
src/dbconn/: dbini.py  dbutils.py
src/dbmapper/: README.md  __init__.py  __main__.py  mapper.py  match_result.py  matcher.py  score.py
src/dborm/: __init__.py  __main__.py  dborm.py
src/dbquery/: README.md  __init__.py  __main__.py  natlang.py  prompt.md
src/dbschema/: README.md  __init__.py  __main__.py  column.py  database.py  foreign_key.py  reference.py  schema.py  table.py
src/dbutils/: README.md  __init__.py  __main__.py  config.py  customhelp.py  dbconfig.py  dbini.py  dbutils.py
src/ddrsearch/: README.md  __init__.py  __main__.py  ddr.py  extraer_foreign_keys.py  extraer_foreign_keys_recursivo.py
src/utils/: encoding.py
