[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbtools"
version = "0.3.0"
description = "Database tools for schema mapping, integrity check and migration"
readme = "README.md"
authors = [
    { name = "Fran Vargas", email = "fvarrui.ceu@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",    
]
keywords = ["db", "tools", "schema", "mapping", "integrity", "check", "migration", "sql", "ddr" ]
dependencies = [
    "BeautifulSoup4",   # HTML/XML parsing
    "colorama",         # Colorize terminal output
    "networkx",         # Graphs
    "openai",           # OpenAI API
    "pptree",           # Pretty print trees
    "psycopg2",         # PostgreSQL
    "pydantic",         # Data validation (JSON serialization)
    "pymysql",          # MySQL/MariaDB 
    "pyodbc",           # SQL Server
    "python-dotenv",    # Environment variables
    "rich",             # Rich text and beautiful formatting in the terminal
    "sqlacodegen",      # DB schema to SQLAlchemy models  
    "sqlalchemy",       # DB metadata
    "tabulate",         # Pretty tables
    "tiktoken",         # Tokenizer for OpenAI API
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Home = "https://github.com/fvarrui/dbtools"
Documentation = "https://github.com/fvarrui/dbtools/blob/main/README.md"
Source = "https://github.com/fvarrui/dbtools"
Issues = "https://github.com/fvarrui/dbtools/issues"

[project.scripts]
dbchecker = "dbchecker.__main__:main"
dbschema = "dbschema.__main__:main"
dbmapper = "dbmapper.__main__:main"
dbutils = "dbutils.__main__:main"
dbanalyzer = "dbanalyzer.__main__:main"
ddrsearch = "ddrsearch.__main__:main"
dbquery = "dbquery.__main__:main"
dborm = "dborm.__main__:main"

[tool.setuptools]
include-package-data = true